--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -50,6 +49,7 @@ a {
     align-items: center;
     width: 90%;
     max-width: 1200px;
+    min-width: 370px;
     height: 80px;
     margin: 0 auto;
     padding: 0 2rem;
@@ -72,7 +72,7 @@ a {
     color: #333;
     font-weight: 500;
     transition: color 0.3s ease;
-    font-size: 10pt;
+    font-size: 7pt;
 }
 .nav-link:hover {
     color: #666;
@@ -143,7 +143,7 @@ a {
     margin: 2rem auto 0;
 }
 .btn img {
-    max-width: 500px;
+    max-width: 336px;
 }
 /* Курсы */
 .courses h1, .courses p {
@@ -193,7 +193,13 @@ a {
 @media (min-width: 992px) {
     .header {
         height: 10%;
+
     }
+
+    .nav-link {
+        font-size: 10pt;
+    }
+
     .nav-link--highlight {
         visibility: visible;
     }
@@ -292,6 +298,11 @@ a {
     gap: 3rem;
 }
 @media (min-width: 768px) {
+
+    .nav-link {
+        font-size: 10pt;
+    }
+
     .signup-form h1 {
         font-size: 50pt;
     }
